objects/npe01__OppPayment__c.object
<CustomObject>
    <fields>
        <fullName>npe01__Check_Reference_Number__c</fullName>
        <label>Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Custom_Payment_Field__c</fullName>
        <label>Custom Payment Field</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>OppPayment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe01__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__ACH_Code__c</fullName>
        <description>The Standard Entry Class (SEC) code used for this ACH transaction.</description>
        <inlineHelpText>The Standard Entry Class (SEC) code used for this ACH transaction.</inlineHelpText>
        <label>ACH Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>npsp__Payment_ACH_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__ACH_Last_4__c</fullName>
        <description>The last four digits of the bank account used for this transaction.</description>
        <inlineHelpText>The last four digits of the bank account used for this transaction.</inlineHelpText>
        <label>ACH Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Authorized_Date__c</fullName>
        <description>The date and time the transaction was authorized.</description>
        <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
        <label>Authorized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Authorized_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
        <label>Authorized UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Number__c</fullName>
        <description>The batch that set this Payment as paid. This field is automatically populated based on your Batch Number Settings in NPSP Settings.</description>
        <inlineHelpText>The batch that set this Payment as paid. This field is automatically populated based on your Batch Number Settings in NPSP Settings.</inlineHelpText>
        <label>Batch Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Expiration_Month__c</fullName>
        <description>The expiration month of the card used for this transaction.</description>
        <inlineHelpText>The expiration month of the card used for this transaction.</inlineHelpText>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Expiration_Year__c</fullName>
        <description>The expiration year of the card used for this transaction.</description>
        <inlineHelpText>The expiration year of the card used for this transaction.</inlineHelpText>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Last_4__c</fullName>
        <description>The last four digits of the card used for this transaction.</description>
        <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Network__c</fullName>
        <description>The card network of the card used for this transaction.</description>
        <inlineHelpText>The card network of the card used for this transaction.</inlineHelpText>
        <label>Card Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__DebitType__c</fullName>
        <description>Indicates the type of debit.</description>
        <label>Debit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Partial Refund</fullName>
                </value>
                <value>
                    <fullName>Chargeback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Donor_Cover_Amount__c</fullName>
        <description>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</description>
        <inlineHelpText>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</inlineHelpText>
        <label>Donor Cover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Original_Payment_ID__c</fullName>
        <description>For refunds only. Shows the ID of the original payment transaction from Elevate.</description>
        <inlineHelpText>For refunds only. Shows the ID of the original payment transaction from Elevate.</inlineHelpText>
        <label>Elevate Original Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_API_Declined_Reason__c</fullName>
        <description>Provides detail about why a transaction was declined.</description>
        <inlineHelpText>Provides detail about why a transaction was declined.</inlineHelpText>
        <label>Elevate Payment API Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_API_Status__c</fullName>
        <description>The API status value for this Elevate connected Payment record.</description>
        <inlineHelpText>The API status value for this Elevate connected Payment record.</inlineHelpText>
        <label>Elevate Payment API Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_Created_Date__c</fullName>
        <description>The date and time the transaction was created.</description>
        <inlineHelpText>The date and time the transaction was created.</inlineHelpText>
        <label>Elevate Payment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_Created_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</inlineHelpText>
        <label>Elevate Payment Created  UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from Elevate.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID for this transaction from Elevate.</inlineHelpText>
        <label>Elevate Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Transaction_Fee__c</fullName>
        <description>The transaction fee charged by Elevate.</description>
        <inlineHelpText>The transaction fee charged by Elevate.</inlineHelpText>
        <label>Elevate Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Gateway_ID__c</fullName>
        <description>The ID of the payment gateway that processed this transaction.</description>
        <inlineHelpText>The ID of the payment gateway that processed this transaction.</inlineHelpText>
        <label>Gateway ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Gateway_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from the payment gateway.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID for this transaction from the payment gateway.</inlineHelpText>
        <label>Gateway Payment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Gateway_Transaction_Fee__c</fullName>
        <description>The transaction fee charged by your payment gateway.</description>
        <inlineHelpText>The transaction fee charged by your payment gateway.</inlineHelpText>
        <label>Gateway Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_ID__c</fullName>
        <description>The ID for the system where the transaction was initiated.</description>
        <inlineHelpText>The ID for the system where the transaction was initiated.</inlineHelpText>
        <label>Origin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_Name__c</fullName>
        <description>The name of the system where the transaction was initiated.</description>
        <inlineHelpText>The name of the system where the transaction was initiated.</inlineHelpText>
        <label>Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_Type__c</fullName>
        <description>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</description>
        <inlineHelpText>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</inlineHelpText>
        <label>Origin Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__OriginalPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original payment transaction associated with this record.</description>
        <inlineHelpText>The original payment transaction associated with this record.</inlineHelpText>
        <label>Original Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledged_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Payment Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this payment.</description>
        <inlineHelpText>Status of Acknowledgment of this payment.</inlineHelpText>
        <label>Payment Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Total_Transaction_Fees__c</fullName>
        <description>The sum of the transaction fees charged by Elevate and your payment gateway.</description>
        <inlineHelpText>The sum of the transaction fees charged by Elevate and your payment gateway.</inlineHelpText>
        <label>Total Transaction Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Type__c</fullName>
        <description>Indicates the type of transaction.</description>
        <inlineHelpText>Indicates the type of transaction.</inlineHelpText>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>